YTDB-510: Rewrite snapshot isolation to pass AtomicOperation explicitly instead of using ThreadLocal
This is the first part of re-implementing the failed SI (Snapshot Isolation) attempt for the database.
The previous approach relied on ThreadLocal-based AtomicOperationTableState propagation, which was
fragile and error-prone. This rewrite makes the AtomicOperation an explicit parameter threaded through
the entire call chain, from transactions down to storage, collections, and indexes.

Key changes:

- Replace ThreadLocal-based AtomicOperationTableState with explicit AtomicOperation parameter
  passing through Storage, StorageCollection, Index, and BTree APIs
- Store AtomicOperation reference directly in FrontendTransactionImpl instead of
  AtomicOperationTableState, with deactivation on transaction close
- Introduce AtomicOperationsSnapshot in AtomicOperation for visibility checks, replacing
  the old AtomicOperationTableState record
- Rework record visibility logic in PaginatedCollectionV2 to use explicit snapshot-based
  visibility (isRecordVersionVisible/isEntryVisible) instead of ThreadLocal lookups
- Simplify historical version lookups in PaginatedCollectionV2 with optimized
  findHistoricalPositionEntry using explicit timestamps and snapshots
- Use commitTs (commit timestamp) instead of operationUnitId for record versioning
- Remove StorageInfo interface - merge its contract directly into Storage, with
  DatabaseSessionEmbedded accessing storage methods directly instead of through
  getStorageInfo().getConfiguration() indirection
- Delete IndexRemote (unused), OrderByOptimizer (unused), StorageInfo (merged),
  and DBRecordMetadataTest (obsolete RecordMetadata API removed)
- Remove deprecated cursor-based Index APIs (iterateEntries*, getFirstKey, getLastKey,
  cursor, descCursor, keyCursor, getSize, count, getKeySize, flush,
  hasRangeQuerySupport, supportsOrderedIterations)
- Thread AtomicOperation through acquireAtomicExclusiveLock in both collections and ind